fix css margin top on mobile

--- a/app/assets/stylesheets/styles.sass
+++ b/app/assets/stylesheets/styles.sass
@@ -117,8 +117,8 @@ html, body
 
 .signin_wrapper, .signup_wrapper, .edit_wrapper, .home_wrapper, .event_wrapper, .quick_event_wrapper
   font-size: 18px
-  margin-top: 9%
   margin-bottom: 9%
+  margin-top: 100px
   form .form-actions
     text-align: center
   .ion-social-facebook:before, .ion-person-add:before, .ion-android-cancel:before, .ion-person-stalker:before, .ion-ios-location:before, .ion-social-usd:before
